files/flux-repository/workloads/istio-services.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-services-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-services
        protocol: HTTP
      hosts:
        - grafana.${MY_DOMAIN}
        - jaeger.${MY_DOMAIN}
        - kiali.${MY_DOMAIN}
        - prometheus.${MY_DOMAIN}
    - port:
        number: 443
        name: https-services
        protocol: HTTPS
      hosts:
        - grafana.${MY_DOMAIN}
        - jaeger.${MY_DOMAIN}
        - kiali.${MY_DOMAIN}
        - prometheus.${MY_DOMAIN}
      tls:
        credentialName: ingress-cert-${LETSENCRYPT_ENVIRONMENT}
        mode: SIMPLE
        privateKey: sds
        serverCertificate: sds
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtual-service
  namespace: istio-system
spec:
  hosts:
    - grafana.${MY_DOMAIN}
  gateways:
    - istio-services-gateway
  http:
    - route:
        - destination:
            host: grafana.istio-system.svc.cluster.local
            port:
              number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger-virtual-service
  namespace: istio-system
spec:
  hosts:
    - jaeger.${MY_DOMAIN}
  gateways:
    - istio-services-gateway
  http:
    - route:
        - destination:
            host: tracing.istio-system.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-virtual-service
  namespace: istio-system
spec:
  hosts:
    - kiali.${MY_DOMAIN}
  gateways:
    - istio-services-gateway
  http:
    - route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-virtual-service
  namespace: istio-system
spec:
  hosts:
    - prometheus.${MY_DOMAIN}
  gateways:
    - istio-services-gateway
  http:
    - route:
        - destination:
            host: prometheus.istio-system.svc.cluster.local
            port:
              number: 9090
